{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Actions",
            "id": "554b219e-163c-4e9d-852e-5487af5e2d1c",
            "actions": [
                {
                    "name": "PlayCard1",
                    "type": "Button",
                    "id": "fc21ce92-b6ec-4edd-a25a-2cc82274dfdc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayCard2",
                    "type": "Button",
                    "id": "78a97985-ae2b-4016-bee6-d998c085e232",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayCard3",
                    "type": "Button",
                    "id": "50831210-eadd-4f0f-8fcb-6af49d050292",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayCard4",
                    "type": "Button",
                    "id": "fdd658cf-1462-4435-86d1-2f2ae354d76d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayCard5",
                    "type": "Button",
                    "id": "ed9ba72c-f8bf-434f-a526-8a6361a6c22f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextTurn",
                    "type": "Button",
                    "id": "3d91d82d-9dcb-4b12-9aa0-cedcc48544d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eff0aedc-a027-406e-aeb4-3d644c259b91",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCard1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acc79b70-bbc5-46bf-8262-bf635cdc6c03",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCard2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b726691-8da6-481c-b8cf-432b5e0e926f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCard3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43ed6fae-e20a-4d98-9a1c-6294a28cb2cf",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCard4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "881976de-e898-4d34-b40f-3e519089106e",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCard5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe182ccd-7dfc-4deb-bf9d-ebfed19f1833",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}